# libigl-examples

./: .gitignore  Makefile  Makefile.conf  README.md
ambient-occlusion/: CMakeLists.txt  example.cpp
bbw/: example.cpp
cmake/: FindLIBIGL.cmake
components/: example.cpp
convertmesh/: CMakeLists.txt  convertmesh.cpp
skeleton/: example.cpp
skeleton-builder/: CMakeLists.txt  example.cpp
skeleton-poser/: CMakeLists.txt  clean.cpp  clean.h  example.cpp  robust_bbw.cpp
